Changes in Version 2.1-0 (2017-07-06)
=====================================

   o rma.uni() and rma.mv() no longer issue (obvious) warnings when user
     constrains vi or V to 0 (i.e., vi=0 or V=0, respectively)


Changes in Version 2.0-0 (2017-06-22)
=====================================

   o added simulate() method for 'rma' objects; added MASS to 'Suggests'
     (since simulating for 'rma.mv' objects requires mvrnorm() from MASS)

   o cooks.distance.rma.mv() now works properly even when there are missing
     values in the data

   o residuals() gains 'type' argument and can compute Pearson residuals

   o the 'newmods' argument in predict() can now be a named vector or a
     matrix/data frame with column names that get properly matched up with
     the variables in the model

   o added ranef.rma.mv() for extracting the BLUPs of the random effects for
     'rma.mv' models

   o all functions that repeatedly refit models now have the option to show
     a progress bar

   o added ranktest.default(), so user can now pass the outcomes and
     corresponding sampling variances directly to the function

   o added regtest.default(), so user can now pass the outcomes and
     corresponding sampling variances directly to the function

   o funnel.default() gains 'subset' argument

   o funnel.default() and funnel.rma() gain 'col' and 'bg' arguments

   o plot.profile.rma() gains 'ylab' argument

   o more consistent handling of 'robust.rma' objects

   o added location-scale model

   o added a print method for 'rma.gosh' objects

   o the (log) relative risk is now called the (log) risk ratio in all help
     files, plots, code, and comments

   o escalc() can now compute outcome measures based on paired binary data
     ("MPRR", "MPOR", "MPRD", "MPORC", and "MPPETO")

   o escalc() can now compute (semi-)partial correlation coefficients
     ("PCOR", "ZPCOR", "SPCOR")

   o escalc() can now compute measures of variability for single groups